--- a/src/main/resources/templates/alter.html
+++ b/src/main/resources/templates/alter.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>alter customer</title>
-    <link rel="shortcut icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -15,27 +15,30 @@
 <div>
 <form class="container" method="POST" action="/alter" th:object="${senderData}">
     <th:block th:include="messageValidation"></th:block>
+    <div class="container">
         <div class="row col 12 form-group border border-dark card-body">
-            <div style="padding:6px">
+            <div style="padding:6px" class="col-6">
                 <input hidden class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                        name="id" required
                        th:field="*{id}"/>
             </div>
-            <div style="padding:6px">
+            <div class="container">
+                <div class="row">
+            <div style="padding:6px" class="  col-6">
                 <label class="fst-italic" style="color:orange"><b>Full Name</b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                        name="prenom" required
                        th:field="*{prenom}"/>
             </div>
 
-            <div style="padding:6px">
-                <label class="fst-italic" style="color:orange"><b>SendAmt</b></label>
+            <div style="padding:6px" class="col-6">
+                <label class="fst-italic" style="color:orange"><b>Send Amount</b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                        name="montant" required
                        th:field="*{montant}"/>
             </div>
 
-            <div style="padding:6px">
+            <div style="padding:6px" class="col-6">
             <label class="fst-italic" style="color:orange"><b>Sender Phone</b></label>
             <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                    required
@@ -43,7 +46,7 @@
             </div>
 
 
-            <div style="padding:6px">
+            <div style="padding:6px" class="col-6">
                 <label class="fst-italic" style="color:orange"><b>Receive Country</b></label>
             <select class="form-select form-select-sm mb-3 text-uppercase fst-italic rounded-pill" required th:errorclass="is-invalid"
                     aria-label=".form-select-sm example value=" type="text" name="pays" th:fieled="*{pays}">
@@ -53,25 +56,24 @@
                 <option>MALI</option>
                 <option>COTE D'IVOIRE</option>
             </select>
-                <div style="padding:6px">
+            </div>
+
+            <div class="container">
+                <div class="row">
+                <div style="padding:6px" class="col-6">
                     <label class="fst-italic" style="color:orange"><b>Receive Name</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                            name="nome" required
                            th:field="*{nome}"/>
                 </div>
-                <div style="padding:6px">
-                    <input hidden class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
-                           name="matriculation" required
-                           th:field="*{matriculation}"/>
-                </div>
 
-                <div style="padding:6px">
-                    <label class="fst-italic" style="color:orange"><b>ReceiveAmt</b></label>
+                <div style="padding:6px" class="col-6">
+                    <label class="fst-italic" style="color:orange"><b>Receive Amount</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                            name="recevoir" required
                            th:field="*{recevoir}"/>
                 </div>
-                <div style="padding:6px">
+                <div style="padding:6px" class="col-6">
                     <label class="fst-italic" style="color:orange"><b>PAYOUT TYPE</b></label>
                     <select class="form-select form-select-sm mb-3 text-uppercase fst-italic rounded-pill" required th:errorclass="is-invalid"
                             aria-label=".form-select-sm example value=" type="text" name="receiveTp" th:fieled="*{receiveTp}">
@@ -83,13 +85,15 @@
                         <option >CASH</option>
                     </select>
                 </div>
-                <div style="padding:6px">
+                <div style="padding:6px" class="col-6">
                     <label class="fst-italic" style="color:orange"><b>Receive Phone</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                            required
                            name="phone" th:field="*{phone}"/>
                 </div>
-                <div style="padding:6px">
+                </div>
+                </div>
+                <div style="padding:6px" class="">
                     <label class="fst-italic" style="color:orange"><b>STATUS</b></label>
                     <select class="form-select form-select-sm mb-3 text-uppercase fst-italic rounded-pill" required th:errorclass="is-invalid"
                             aria-label=".form-select-sm example value=" type="text" name="status" th:fieled="*{status}">
@@ -99,10 +103,18 @@
                         <option style="color:orange">PENDING</option>
                         <option style="color:red">CANCEL</option>
                     </select>
+                    <div style="padding:6px" >
+                        <input hidden class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
+                               name="matriculation" required
+                               th:field="*{matriculation}"/>
+                    </div>
                 </div>
+                </div>
+            </div>
+
                 <div class="text-center">
                     <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">SEND</button>
-                    <button  class="btn center" style="margin:30px;background-color:orange" ><a href="/prestige-principal" style="color:white">GO BACK</a></button>
+                    <button  class="btn center" style="margin:30px;background-color:orange" ><a href="/listes-unpaid" style="color:white;text-decoration:none">GO BACK</a></button>
                 </div>
                 <p class=" text-center font-italic" style="color:orange"><b>Prestige sender and receive money</b></p>
             </div>
