--- a/src/main/resources/templates/filtre.html
+++ b/src/main/resources/templates/filtre.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>liste des membres</title>
-    <link rel="shortcut icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/materialize.min.css}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -52,7 +52,7 @@
 </table>
 
 <div class="text-center">
-    <button  class="btn center" style="margin:30px;background-color:#66ff66" ><a href="/listes-unpaid" style="color:white">GO BACK</a></button>
+    <button  class="btn center" style="margin:30px;background-color:#66ff66" ><a href="/listes-unpaid" style="color:white;text-decoration:none">GO BACK</a></button>
 </div>
 <!--<a href="/index" class="waves-effect waves-light btn-small btn-info"><i class="material-icons left">cloud</i>Retour au page principal</a>-->
 
