--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>cadastre</title>
-    <link rel="shortcut icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"-->
+<!--          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class="container" style="background-color:#cccccc">
@@ -15,29 +17,29 @@
 <div>
 <form class="container" method="POST" th:object="${senderData}">
     <th:block th:include="messageValidation"></th:block>
-        <div class="row col 12 form-group border border-dark card-body">
-            <div style="padding:6px">
+    <div class="container">
+        <div class="row form-group border border-dark card-body">
+            <div style="padding:6px" class="col-6">
                 <label class="fst-italic" style="color:orange"><b>Full Name</b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                        name="prenom" required
                        th:fieled="*{prenom}"/>
             </div>
 
-            <div style="padding:6px">
-                <label class="fst-italic" style="color:orange"><b>SendAmt</b></label>
+            <div style="padding:6px" class="col-6">
+                <label class="fst-italic" style="color:orange"><b>Send Amount </b></label>
                 <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                        name="montant" required
                        th:fieled="*{montant}"/>
             </div>
 
-            <div style="padding:6px">
+            <div style="padding:6px" class="col-6">
             <label class="fst-italic" style="color:orange"><b>Sender Phone</b></label>
             <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                    required
                    name="telephone" th:fieled="*{telephone}"/>
-            </div>
-
-            <div style="padding:6px">
+          </div>
+            <div style="padding:6px" class="col-6">
                 <label class="fst-italic" style="color:orange"><b>Receive Country</b></label>
             <select class="form-select form-select-sm mb-3 text-uppercase fst-italic rounded-pill" required th:errorclass="is-invalid"
                     aria-label=".form-select-sm example value=" type="text" name="pays" th:fieled="*{pays}">
@@ -47,13 +49,16 @@
                 <option>MALI</option>
                 <option>COTE D'IVOIRE</option>
             </select>
-                <div style="padding:6px">
+            </div>
+            <div class="container">
+                <div class="row">
+                <div style="padding:6px" class="col-6">
                     <label class="fst-italic" style="color:orange"><b>Receive Name</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="text" value=""
                            name="nome" required
                            th:fieled="*{nome}"/>
                 </div>
-                <div style="padding:6px">
+                <div style="padding:6px" class="col-6">
                     <label class="fst-italic" style="color:orange"><b>PAYOUT TYPE</b></label>
                     <select class="form-select form-select-sm mb-3 text-uppercase fst-italic rounded-pill" required th:errorclass="is-invalid"
                             aria-label=".form-select-sm example value=" type="text" name="receiveTp" th:fieled="*{receiveTp}">
@@ -66,22 +71,23 @@
                     </select>
                 </div>
 
-                <div style="padding:6px">
-                    <label class="fst-italic" style="color:orange"><b>ReceiveAmt</b></label>
+                <div style="padding:6px" class="col-6">
+                    <label class="fst-italic" style="color:orange"><b>Receive Amount</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                            name="recevoir" required
                            th:fieled="*{recevoir}"/>
                 </div>
-                <div style="padding:6px">
+                <div style="padding:6px" class="col-6">
                     <label class="fst-italic" style="color:orange"><b>Receive Phone</b></label>
                     <input class="form-control rounded-pill" placeholder="" th:errorclass="is-invalid" type="number" value=""
                            required
                            name="phone" th:fieled="*{phone}"/>
                 </div>
-
+                </div>
+            </div>
                 <div class="text-center">
                     <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">SEND</button>
-                    <button  class="btn center" style="margin:30px;background-color:orange" ><a href="/prestige-principal" style="color:white">GO BACK</a></button>
+                    <button  class="btn center" style="margin:30px;background-color:orange;text-decoration:none" ><a href="/prestige-principal" style="color:white">GO BACK</a></button>
                 </div>
                 <p class=" text-center font-italic" style="color:orange"><b>Prestige sender and receive money</b></p>
             </div>
