--- a/src/main/resources/templates/login-up.html
+++ b/src/main/resources/templates/login-up.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <title>cadastre</title>
-    <link rel="shortcut icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -43,9 +43,9 @@
                    name="email" th:fieled="*{email}"/>
             </div>
                 <div class="text-center">
-                    <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">sign</button>
+                    <button class="btn center" style="margin:30px;background-color:orange;color:white" type="submit">sign</button>
                 </div>
-                <p class=" text-center font-italic" style="color:white"><b>Prestige Securite</b></p>
+                <p class=" text-center font-italic" style="color:orange"><b>Be careful with your security key</b></p>
             </div>
 
 </form>
