--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,10 +7,12 @@
 <head>
     <meta charset="UTF-8">
     <title>cadastre</title>
-    <link rel="shortcut icon" href="img/logo.jpg">
+    <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class="container align-items:center text-center" style="background-image:url('img/sec.png');
@@ -24,28 +26,30 @@
     <div class="alert alert-danger" role="alert" th:if="${msg}">
         <strong th:text="${msg}"></strong>
     </div>
+    <div class="text-center">
         <div class="row col 12 form-group border border-dark card-body">
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>USER NAME</b></label>
                 <input class="form-control rounded-pill" placeholder="" type="text" value=""
-                       name="user" th:field="*{user}"  required />
+                       name="user" th:field="*{user}"   />
             </div>
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:orange"><b>PASSWORD</b></label>
                 <input class="form-control rounded-pill" placeholder=""  type="password" value="" th:field="*{senha}"
-                       name="senha" required
+                       name="senha"
                        />
             </div>
-            <p class=" text-center font-italic" style="color:white"><b>you no have user?<a href="/login-up">click here</a></b></p>
+            <p class=" text-center font-italic" style="color:orange"><b>you no have user?<a href="/login-up">click here</a></b></p>
 
             <div class="text-center">
                     <button class="btn center" style="margin:30px;background-color:orange;color:white" type="submit">Login</button>
                 </div>
-                <p class=" text-center font-italic" style="color:white"><b>Prestige Securite</b></p>
+                <p class=" text-center font-italic" style="color:orange"><b>Be careful with your security key</b></p>
             </div>
 
 </form>
+</div>
 </div>
 
 
