--- a/src/main/resources/templates/messageValidation.html
+++ b/src/main/resources/templates/messageValidation.html
@@ -11,5 +11,13 @@
     </div>
 </div>
 
+<div class="alert alert-danger" th:text="${msg}"
+     th:if="${not #strings.isEmpty(msg)}"></div>
+<div class="alert alert-danger"  th:if="${#fields.hasAnyErrors()}">
+    <div th:each="detailedError : ${#fields.detailedErrors()}">
+        <span th:text="${detailedError.message}"></span>
+    </div>
+</div>
+
 </body>
 </html>
