--- a/src/main/resources/templates/prestige-principal.html
+++ b/src/main/resources/templates/prestige-principal.html
@@ -11,16 +11,27 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body class=".bg-gradient-light" style="background-image:url('img/dolar.jpg')">
 
+<div class="alert alert-success alert-dismissible fade show text-center" role="alert">
+    <strong class="text-center">Hi have you good day <span th:text="${session.userLogin.user}"></span></strong>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <span aria-hidden="true">&times;</span>
+</div>
+
+<form style="padding:5px" action="/logout" method="post">
+    <button type="submit" class="btn-nav nav-item nav-link btn-danger" ><i class="fas fa-times" style="color:white">logout</i></button>
+</form>
 <h2 class="d-flex justify-content-center">
     <br>
-        <div class="card-body">
+        <div class="card-body -justify-content-center">
             <br>
-            <p class=" text-center fst-italic" style="color:orange;"><b><strong >Prestige send and receive money</strong></b></p>
+            <p class=" text-center fst-italic" style="color:orange;"><b><strong class="text-center">Prestige send and receive money</strong></b></p>
         </div>
     <div class="justify-content-center">
         <form method="post" action="pesquisar-resultado" th:object="${senderData}" class="text-center">
@@ -35,49 +46,43 @@
 <main>
     <div class="card-body">
         <div class="card-body text-center d-flex justify-content-center">
-            <button  type="button" class="btn-sm btn  fst-italic btn-center" style="background-color:#708090;margin:5px"><a href="/form" style="color:white">send money</a></button>
-            <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="/invoices-all" style="color:white">invoice all</a></button>
-            <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:red;margin:5px"><a href="/listes-unpaid" style="color:white">UNPAID LIST</a></button>
+            <a  type="button" href="/form" class="btn-sm btn  fst-italic btn-center" style="background-color:#708090;margin:5px text-decoration:none;color:white; margin:5px">send money</a>
+            <a  type="button" href="/invoices-all" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px text-decoration:none; color:white;  margin:5px">invoice all</a>
+            <a  type="button" href="/listes-unpaid" class="btn-sm btn fst-italic btn-center" style="background-color:red;margin:5px text-decoration:none;color:white;  margin:5px">UNPAID LIST</a>
         </div>
     </div>
 </main>
-<section>
-    <header class="d-flex justify-content-center">
-        <div class="card-body" width="400" height="205">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                </ol>
-                <div class="carousel-inner ">
-                    <div class="item active">
-                        <img src="img/sen.png" class="rounded mx-auto d-block" width="400" height="300">
-                    </div>
-                    <div class="item">
-                        <img src="img/afri.png" class="rounded mx-auto d-block" width="400" height="300">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" role="button"  data-target="#carouselExampleIndicators">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" role="button"  data-target="#carouselExampleIndicators">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+<section class="d-flex justify-content-center">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="card-body" style="">
+        <div class="carousel-inner" >
+            <div class="carousel-item  card-body">
+                <img src="img/sen.png" class="d-block w-100" alt="..." style="height:5%; width:10%">
+            </div>
+            <div class="carousel-item ">
+                <img src="img/afri.png" class="d-block w-100" alt="..."style="height:5%; width:10%;">
             </div>
         </div>
-    </header>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 </section>
 <br><br>
 <div class="card-body">
     <div class="card-body text-center d-flex justify-content-center">
-        <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:orange;margin:5px"><a href="https://g.co/kgs/8TcPjd" style="color:white"><b>RATE-TODAY</b></a></button>
-        <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="https://wise.com/us/currency-converter/usd-to-xof-rate" style="color:white"><b>WISERATE</b></a></button>
+        <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:orange;margin:5px"><a href="https://g.co/kgs/8TcPjd" style="color:white;text-decoration:none"><b>RATE-TODAY</b></a></button>
+        <button  type="button" class="btn-sm btn fst-italic btn-center" style="background-color:green;margin:5px"><a href="https://wise.com/us/currency-converter/usd-to-xof-rate" style="color:white;text-decoration:none"><b>WISERATE</b></a></button>
     </div>
 </div>
 <br><br>
-<footer class=" text-center fst-italic" style="color:white;"><b style="background-color:orange">envoyer et recevoir votre argent en toute securite</b></footer>
+<footer class=" text-center fst-italic" style="color:white;"><b style="">envoyer et recevoir votre argent en toute securite</b></footer>
 
 <!--Import jQuery before materialize.js-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
