--- a/src/main/resources/templates/alter.html
+++ b/src/main/resources/templates/alter.html
@@ -114,7 +114,7 @@
 
                 <div class="text-center">
                     <button class="btn center" style="margin:30px;background-color:green;color:white" type="submit">SEND</button>
-                    <button  class="btn center" style="margin:30px;background-color:orange" ><a href="/listes-unpaid" style="color:white;text-decoration:none">GO BACK</a></button>
+                    <button  class="btn center" style="margin:30px;background-color:orange" ><a th:href="@{/coustomers-all-invoices-listes-unpaid}" style="color:white;text-decoration:none">GO BACK</a></button>
                 </div>
                 <p class=" text-center font-italic" style="color:orange"><b>Prestige sender and receive money</b></p>
             </div>
