change name for url

--- a/src/main/resources/templates/alter.html
+++ b/src/main/resources/templates/alter.html
@@ -3,7 +3,7 @@
       xml:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>alter customer</title>
+    <title>prestige-send-money-alter-customer</title>
     <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
