--- a/src/main/resources/templates/pesquisar-resultado.html
+++ b/src/main/resources/templates/pesquisar-resultado.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>liste des clientes</title>
+    <title>search</title>
     <link rel="shortcut icon" href="img/do.jpg">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
