--- a/src/main/resources/templates/filtre.html
+++ b/src/main/resources/templates/filtre.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>liste des membres</title>
+    <title>prestige-send-money-filtre</title>
     <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/materialize.min.css}"/>
