--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
       xml:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>cadastre</title>
+    <title>prestige-send-money-login</title>
     <link rel="shortcut icon" href="img/do.jpg">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,6 @@
 <div class="text-center align-items:center" style="background-color:black; border-radius:10px; border:10px; border-color:orange;padding:12%">
     <p class="card-body d-flex justify-content-center" style="color:white"><b>LOGIN</b></p></header>
     <form class="container" method="POST" action="login" th:object="${loginModel}">
-    <th:block th:include="messageValidation"></th:block>
     <div class="alert alert-danger" role="alert" th:if="${msg}">
         <strong th:text="${msg}"></strong>
     </div>
@@ -32,12 +31,12 @@
             <div style="padding:6px">
                 <label class="fst-italic" style="color:white"><b>USER NAME</b></label>
                 <input class="form-control rounded-pill" placeholder="" type="text" value=""
-                       name="user" th:field="*{user}"   />
+                       name="user" th:field="*{user}" required  />
             </div>
 
             <div style="padding:6px">
                 <label class="fst-italic" style="color:white"><b>PASSWORD</b></label>
-                <input class="form-control rounded-pill" placeholder=""  type="password" value="" th:field="*{senha}"
+                <input class="form-control rounded-pill" placeholder=""  type="password" value="" th:field="*{senha}" required
                        name="senha"
                        />
             </div>
