--- a/src/main/resources/templates/prestige-principal.html
+++ b/src/main/resources/templates/prestige-principal.html
@@ -19,7 +19,8 @@
 <body class=".bg-gradient-light" style="background-image:url('img/dolar.jpg')">
 
 <div class="alert alert-success alert-dismissible fade show text-center" role="alert">
-    <strong class="text-center">Hi have you good day <span th:text="${session.userLogin.user}"></span></strong>
+
+    <strong class="text-center"><a href="/invoice-prestige-total-login" style="text-decoration:none;color:green"> Hi have you good day </a><span th:text="${session.userLogin.user}"></span></strong>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     <span aria-hidden="true">&times;</span>
 </div>
