i do the part for validate and lock unclokh login

--- a/src/main/resources/templates/login-up.html
+++ b/src/main/resources/templates/login-up.html
@@ -13,10 +13,7 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="container" style="background-image:url('img/sec.png');
-    min-height:10px;
-    max-width: 40%;
-    height:40%">
+<body class="container" style="background-image:url('img/sec.png')">
 <div class="text-center align-items:center" style="background-color:black; border-radius:10px; border:10px; border-color:orange;padding:10%">
     <p class="card-body d-flex justify-content-center" style="color:blue"><b>SIGN UP</b>
     <form class="container" method="POST" th:object="${loginModel}" action="saveUsuarios">
