--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,10 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body class="container align-items:center text-center" style="background-image:url('img/sec.png');
-    min-height:15px;
-    max-width: 40%;
-    height:20%">
+<body class="container align-items:center text-center" style="background-image:url('img/sec.png')">
 
 <div class="text-center align-items:center" style="background-color:black; border-radius:10px; border:10px; border-color:orange;padding:12%">
     <p class="card-body d-flex justify-content-center" style="color:white"><b>LOGIN</b></p></header>
