--- a/src/main/resources/templates/invoice-prestige-total-login.html
+++ b/src/main/resources/templates/invoice-prestige-total-login.html
@@ -43,7 +43,7 @@
 
 
 <div class="text-center">
-    <button  class="btn center" style="margin:30px;background-color:orange;text-decoration:none" ><a href="/prestige-principal" style="color:white">GO BACK</a></button>
+    <button  class="btn center" style="margin:30px;background-color:blue;text-decoration:none" ><a href="/prestige-principal" style="color:white">GO BACK</a></button>
 </div>
 <!--<a href="/index" class="waves-effect waves-light btn-small btn-info"><i class="material-icons left">cloud</i>Retour au page principal</a>-->
 
