--- a/src/main/resources/templates/prestige-principal.html
+++ b/src/main/resources/templates/prestige-principal.html
@@ -31,10 +31,10 @@
 <h2 class="d-flex justify-content-center">
     <p class=" text-center fst-italic" style="color:orange;"><strong class="text-center">Prestige send and receive money</strong></p>
 </h2>
-    <div class="justify-content-center">
+    <div class="text-center">
         <form method="post" action="pesquisar-resultado" th:object="${senderData}" class="text-center">
-            <input class="form-control text-center" style="width: 80%;" id="filtro"  type="text" name="phone" th:field="*{telephone}" placeholder="search" />
-            <div>
+            <div class="d-flex justify-content-center">
+            <input class="form-control text-center" style="width:20%;padding:5px" id="filtro"  type="text" name="phone" th:field="*{telephone}" placeholder="search" />
                 <button class="btn btn-primary " type="submit" style="color:white">search</button>
             </div>
         </form>
